[gd_scene load_steps=18 format=3 uid="uid://ty4hmpdson08"]

[ext_resource type="Script" path="res://Assets/Components/Hud/Hud.gd" id="1_g7qhv"]
[ext_resource type="Texture2D" uid="uid://dqvd724pdp4k0" path="res://Assets/Sprites/Hud.png" id="2_ypgpk"]
[ext_resource type="Texture2D" uid="uid://cv27ev85oq8x" path="res://Assets/Sprites/Hud_Frame.png" id="3_l6w4i"]
[ext_resource type="Texture2D" uid="uid://vr73ifkr7elu" path="res://Assets/Sprites/Lvel_Bg.png" id="4_5q7do"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0erc8"]
texture = ExtResource("2_ypgpk")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1mbc"]
bg_color = Color(0.254902, 0.141176, 0.117647, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xnukc"]
bg_color = Color(0.156863, 0.156863, 0.156863, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.498039, 0.376471, 0.168627, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ou6gj"]
texture = ExtResource("3_l6w4i")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ui88"]
bg_color = Color(0.137255, 0.137255, 0.137255, 0)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Gradient" id="Gradient_rsoth"]
offsets = PackedFloat32Array(0, 0.506757, 1)
colors = PackedColorArray(0.941176, 0, 0, 1, 0.85098, 0.0862745, 0.101961, 0.796078, 0.388235, 0.117647, 0.109804, 0.784314)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lwf3x"]
gradient = SubResource("Gradient_rsoth")
fill_from = Vector2(0.518868, 0)
fill_to = Vector2(0.54717, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bps84"]
texture = SubResource("GradientTexture2D_lwf3x")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fndv6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jhlej"]
texture = ExtResource("4_5q7do")

[sub_resource type="Gradient" id="Gradient_vbojj"]
offsets = PackedFloat32Array(0, 0.412162, 0.790541, 1)
colors = PackedColorArray(0.103744, 0.103744, 0.103744, 1, 0.0627451, 0.0627451, 0.0627451, 0.921569, 0.162066, 0.162066, 0.162066, 0.501961, 0.158472, 0.158472, 0.158472, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h7qeo"]
gradient = SubResource("Gradient_vbojj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8id86"]
texture = SubResource("GradientTexture2D_h7qeo")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -808.0
offset_bottom = -507.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g7qhv")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 2.0
offset_right = 327.0
offset_bottom = 83.0
theme_override_styles/panel = SubResource("StyleBoxTexture_0erc8")

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 323.0
offset_bottom = 76.0
theme_override_styles/panel = SubResource("StyleBoxFlat_y1mbc")

[node name="Avatar" type="Panel" parent="Panel/Panel"]
visible = false
layout_mode = 0
offset_left = 48.0
offset_top = 95.0
offset_right = 106.0
offset_bottom = 150.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xnukc")

[node name="Sprite2D" type="Sprite2D" parent="Panel/Panel/Avatar"]

[node name="HealthbarPanel" type="Panel" parent="Panel/Panel"]
clip_contents = true
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 314.0
offset_bottom = 67.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ou6gj")

[node name="HealthBar" type="ProgressBar" parent="Panel/Panel/HealthbarPanel"]
z_index = 1
layout_mode = 0
offset_left = 4.0
offset_top = 34.0
offset_right = 305.0
offset_bottom = 59.0
theme_override_styles/background = SubResource("StyleBoxFlat_6ui88")
theme_override_styles/fill = SubResource("StyleBoxTexture_bps84")
max_value = 1e+09
value = 1e+07
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 39.0
offset_right = 304.0
offset_bottom = 62.0
theme_override_constants/separation = 6
alignment = 2

[node name="Progress" type="Label" parent="Panel/Panel/HBoxContainer"]
layout_mode = 2
text = "23232"

[node name="Label" type="Label" parent="Panel/Panel/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="Total" type="Label" parent="Panel/Panel/HBoxContainer"]
layout_mode = 2
text = "23232"

[node name="Info_Container" type="Panel" parent="."]
layout_mode = 0
offset_left = -6.0
offset_top = 84.0
offset_right = 323.0
offset_bottom = 133.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_fndv6")

[node name="Level_count_container" type="Panel" parent="Info_Container"]
z_index = 1
layout_mode = 0
offset_top = 2.0
offset_right = 53.0
offset_bottom = 53.0
theme_override_styles/panel = SubResource("StyleBoxTexture_jhlej")

[node name="Level_count" type="Label" parent="Info_Container/Level_count_container"]
layout_mode = 0
offset_left = 18.0
offset_top = 10.0
offset_right = 37.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "69"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3
uppercase = true

[node name="Name_container" type="Panel" parent="Info_Container"]
layout_mode = 0
offset_left = 41.0
offset_top = 9.0
offset_right = 260.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxTexture_8id86")

[node name="Name" type="Label" parent="Info_Container/Name_container"]
layout_mode = 0
offset_left = 25.0
offset_top = 2.0
offset_right = 208.0
offset_bottom = 28.0
text = "PYROMANCER"
vertical_alignment = 1
